fix: replace morph image on mobile at top block

--- a/src/components/sections/Header/components/MorphBlock/style.module.scss
+++ b/src/components/sections/Header/components/MorphBlock/style.module.scss
@@ -63,3 +63,8 @@
     height: 613.27px;
   }
 }
+
+.morphMobile {
+  width: 340px;
+  height: 550px;
+}
